--- a/server-init.cfg
+++ b/server-init.cfg
@@ -9,7 +9,7 @@ maxclients 8
 
 // maximum number of bots a master can add - admins are unaffected by this limit
 // set to 0 to disallow bots
-serverbotlimit 8
+serverbotlimit 32
 
 // controls whether or not the server is intended for "public" use
 // when set to 0, allows "setmaster 1" and locked/private mastermodes (for coop-editing and such)
@@ -18,7 +18,7 @@ serverbotlimit 8
 publicserver 0
 
 // description server shows for the server browser
-serverdesc ""
+serverdesc "Bomberman Server Simulation"
 
 // password required to connect to the server
 // generally unnecessary unless you really don't want anyone connecting to your server
@@ -29,6 +29,15 @@ adminpass ""
 
 // controls whether or not the server reports to the masterserver
 updatemaster 1
+
+// the hostname and port of the masterserver (default: sauerbomber.org)
+// 
+// WARNING: DO NOT use "sauerbraten.org" if you want to see your server on a
+// masterlist. Eihrul does not accept any servers, that have additional game
+// modes like sauerbomber.
+// 
+// mastername sauerbomber.org
+// masterport 28787
 
 // optional message of the day to send to players on connect
 // servermotd "..."
