--- a/src/Makefile
+++ b/src/Makefile
@@ -10,7 +10,7 @@ MV=mv
 ifdef DEBUG
 override CXXFLAGS+=-O0 -Wall -g
 else
-override CXXFLAGS+=-O3 -fomit-frame-pointer -ffast-math
+override CXXFLAGS+=-O3 -Wall -fomit-frame-pointer -ffast-math
 endif
 
 # PLATFORM DETECTION #######################################
