Fix 32/64 bit detection in native target

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-PLATFORM= $(shell uname -s)
+PLATFORM= $(shell uname -som)
 PLATFORM_PREFIX= native
 
 INCLUDES= -Ishared -Iengine -Ifpsgame -Ienet/include
