--- a/server-init.cfg
+++ b/server-init.cfg
@@ -39,13 +39,8 @@ serverdesc "Bomberman Server Simulation"
 // controls whether or not the server reports to the masterserver
 updatemaster 1
 
-// the hostname and port of the masterserver (default: sauerbomber.org)
-// 
-// WARNING: DO NOT use "sauerbraten.org" if you want to see your server on a
-// masterlist. Eihrul does not accept any servers, that have additional game
-// modes like sauerbomber.
-// 
-// mastername sauerbomber.org
+// the hostname and port of the masterserver (default: sauerbraten-fork.org)
+// mastername sauerbraten-fork.org
 // masterport 28787
 
 // optional message of the day to send to players on connect
