Also use enet from linux distribution for 32 bit builds

--- a/src/Makefile
+++ b/src/Makefile
@@ -144,10 +144,10 @@ override CFLAGS+=-m32
 override LDFLAGS+=-m32
 
 CLIENT_INCLUDES= $(INCLUDES) -I/usr/X11R6/include `sdl-config --cflags`
-CLIENT_LIBS= -Lenet/.libs -lenet -L/usr/X11R6/lib -lX11 `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lGL -lstdc++ -lm -lrt
+CLIENT_LIBS= -lenet -L/usr/X11R6/lib -lX11 `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lstdc++ -lm -lrt -lGL
 
 SERVER_INCLUDES= -DSTANDALONE $(INCLUDES)
-SERVER_LIBS= -Lenet/.libs -lenet -lz -lm -lstdc++
+SERVER_LIBS= -lenet -lz -lm -lstdc++
 
 MASTER_LIBS= $(SERVER_LIBS)
 
@@ -163,8 +163,10 @@ override LDFLAGS+=-m64
 
 CLIENT_INCLUDES= $(INCLUDES) -I/usr/X11R6/include `sdl-config --cflags`
 CLIENT_LIBS= -lenet -L/usr/X11R6/lib -lX11 `sdl-config --libs` -lSDL_image -lSDL_mixer -lz -lstdc++ -lm -lrt -lGL
+
 SERVER_INCLUDES= -DSTANDALONE $(INCLUDES)
 SERVER_LIBS= -lenet -lz -lm -lstdc++
+
 MASTER_LIBS= $(SERVER_LIBS)
 
 endif
