--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ before_install:
   # Install dependencies
   - sudo apt-get update
   - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev
-  - sudo apt-get -y install gcc-mingw-w64-i686 g++-mingw-w64-i686
+  # Todo: fix
+  #- sudo apt-get -y install gcc-mingw-w64-i686 g++-mingw-w64-i686
 
 script:
   - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 && cd .. && rm -rf cmakebuild)
@@ -15,5 +16,5 @@ compiler:
 env:
   - CMAKE_FLAGS=
   - CMAKE_FLAGS=-DRELEASE_BUILD=1
-  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake
-  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1
+  #- CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake
+  #- CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1
