--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 before_install:
   # Install dependencies
   - sudo apt-get update
-  - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev
+  - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libenet-dev
   # Todo: fix
   #- sudo apt-get -y install gcc-mingw-w64-i686 g++-mingw-w64-i686
 
