--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = src/platform_windows
 	url = https://github.com/Theintercooler/Platform-Windows.git
 	branch = master
+[submodule "src/libraries/enet"]
+	path = src/libraries/enet
+	url = https://github.com/Theintercooler/enet.git
+	branch = master
