Use mingw32 in travis file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ before_install:
   # Install dependencies
   - sudo apt-get update
   - sudo apt-get -y install build-essential zlib1g-dev libsdl1.2-dev libsdl-image1.2-dev libsdl-mixer1.2-dev libenet-dev
-  # Todo: fix
-  #- sudo apt-get -y install gcc-mingw-w64-i686 g++-mingw-w64-i686
+  - sudo apt-get -y install mingw32
 
 script:
   - (mkdir cmakebuild && cd cmakebuild && cmake $CMAKE_FLAGS .. && make -j5 && cd .. && rm -rf cmakebuild)
@@ -16,5 +15,5 @@ compiler:
 env:
   - CMAKE_FLAGS=
   - CMAKE_FLAGS=-DRELEASE_BUILD=1
-  #- CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake
-  #- CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1
+  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DMINGW_TYPE=classic
+  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic
