Fix quoting in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ compiler:
 env:
   - CMAKE_FLAGS=
   - CMAKE_FLAGS=-DRELEASE_BUILD=1
-  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DMINGW_TYPE=classic
-  - CMAKE_FLAGS=-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic
+  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DMINGW_TYPE=classic"
+  - CMAKE_FLAGS="-DCMAKE_TOOLCHAIN_FILE=../src/platform_windows/linux-toolchain-mingw.cmake -DRELEASE_BUILD=1  -DMINGW_TYPE=classic"
