--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,6 +150,7 @@ if(EXISTS ${PLATFORM_FILE})
     message(STATUS "Found platform definition. (${PLATFORM_FILE})")
     add_subdirectory(${PLATFORM_FILE})
     link_directories(${PLATFORM_LINK_DIRECTORIES})
+    include_directories(${PLATFORM_INCLUDE_DIRECTORIES})
 else()
     message(STATUS "Could not find platform definition. (${PLATFORM_FILE})")
 endif()
