--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,13 +36,27 @@ elseif(${BUILD_TARGET_OSX})
     find_library(SDL_IMAGE_LIBRARY SDL_image)
     find_library(SDL_MIXER_LIBRARY SDL_mixer)
 
+    find_library(CORESERVICES_LIBRARY CoreServices)
+    find_library(COCOA_LIBRARY Cocoa)
+
+    set(SDL_LIBRARIES "${SDL_LIBRARY};${SDL_MIXER_LIBRARY};${SDL_IMAGE_LIBRARY};${CORESERVICES_LIBRARY};${COCOA_LIBRARY}")
+    
     find_path(SDL_INCLUDE_DIR SDL.h)
     find_path(SDL_IMAGE_INCLUDE_DIR SDL_image.h)
     find_path(SDL_MIXER_INCLUDE_DIR SDL_mixer.h)
     set(SDL_INCLUDE_DIRS "${SDL_INCLUDE_DIR};${SDL_IMAGE_INCLUDE_DIR};${SDL_MIXER_INCLUDE_DIR}")
+    #include_directories(${SDL_INCLUDE_DIR} ${SDL_IMAGE_INCLUDE_DIR} ${SDL_MIXER_INCLUDE_DIR})
 endif()
 
-if(NOT DEFINED ENET_LIBRARIES)
+if(NOT DEFINED ENET_LIBRARIES AND NOT DEFINED LOCAL_ENET)
+    set(LOCAL_ENET 1 CACHE INTERNAL "Use local enet library")
+elseif(DEFINED LOCAL_ENET)
+    set(LOCAL_ENET ${LOCAL_ENET} CACHE INTERNAL "Use local enet library")
+else()
+    set(LOCAL_ENET 0 CACHE INTERNAL "Use local enet library")
+endif()
+
+if(${LOCAL_ENET})
     message(STATUS "Building local ENet")
     add_subdirectory(libraries/enet)
 endif()
