replace hard coded paths

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -11,6 +11,7 @@ endif()
 
 set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../shared/crypto
+    ${CMAKE_CURRENT_SOURCE_DIR}/../shared/io
     ${CMAKE_CURRENT_SOURCE_DIR}/../shared/geom
     ${CMAKE_CURRENT_SOURCE_DIR}/../shared/stream
     ${CMAKE_CURRENT_SOURCE_DIR}/../shared/tools
