emitter spawns particles create instances of emitters and modifiers still work in progress

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -56,8 +56,15 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/blob
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/osd
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/particles
-    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/massspring
-    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/velocity
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitter
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderer
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifier
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/particletype
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/massspring
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/velocity
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderers/billboard
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/ptest
 
     ${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/ai
     ${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/client       
