--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -65,6 +65,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/randomv
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/randomw
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/gravitypoint
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/modifiers/damper
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/field
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderers/billboard
