Emitters, modifiers and renderer implementations are singletons now Added a simple cube renderer Added color for renderer types and instances

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -69,6 +69,7 @@ set(CLIENT_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/point
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/emitters/field
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderers/billboard
+    ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/renderers/cube
     ${CMAKE_CURRENT_SOURCE_DIR}/../engine/particles/ptest
 
     ${CMAKE_CURRENT_SOURCE_DIR}/../fpsgame/ai
